--- a/docroot/themes/custom/tower_health/templates/fields/field--field_rating_comments_ref.html.twig
+++ b/docroot/themes/custom/tower_health/templates/fields/field--field_rating_comments_ref.html.twig
@@ -41,5 +41,6 @@
 
 {% include "@organisms/review-listing/review-listing.twig" with {
   "icon": icon,
-  "reviews": reviews
+  "reviews": reviews,
+  "rating": rating
 } %}
