--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/care-circle/_care-circle.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/care-circle/_care-circle.scss
@@ -6,7 +6,7 @@
 
 .care-circle__list {
   margin: 75px auto 0;
-  border: solid 4px $trust-ltst;
+  border: solid 3px $off-white;
   list-style: none;
   padding: 0;
   
@@ -14,7 +14,7 @@
     display: flex;
     justify-content: center;
     margin: 0 2em;
-    border-radius: 20px;
+    border-radius: 21px;
     flex-wrap: wrap;
     border: none;
   }
@@ -40,7 +40,7 @@
     }
     
     @include breakpoint($bp3) {
-      @include on-circle($item-count: 4, $circle-size: 375px, $item-size: 150px, $arrowy: -20px);
+      @include on-circle($item-count: 4, $circle-size: 375px, $item-size: 150px, $arrowy: -21px);
     }
     
     @include breakpoint($bp4) {
@@ -54,7 +54,7 @@
     }
     
     @include breakpoint($bp3) {
-      @include on-circle($item-count: 5, $circle-size: 375px, $item-size: 150px, $arrowy: -20px);
+      @include on-circle($item-count: 5, $circle-size: 375px, $item-size: 150px, $arrowy: -21px);
     }
     
     @include breakpoint($bp4) {
@@ -68,7 +68,7 @@
     }
     
     @include breakpoint($bp3) {
-      @include on-circle($item-count: 6, $circle-size: 375px, $item-size: 150px, $arrowy: -20px);
+      @include on-circle($item-count: 6, $circle-size: 375px, $item-size: 150px, $arrowy: -21px);
     }
     
     @include breakpoint($bp4) {
@@ -82,7 +82,7 @@
     }
     
     @include breakpoint($bp3) {
-      @include on-circle($item-count: 7, $circle-size: 375px, $item-size: 130px, $arrowy: -20px);
+      @include on-circle($item-count: 7, $circle-size: 375px, $item-size: 130px, $arrowy: -21px);
     }
     
     @include breakpoint($bp4) {
@@ -92,11 +92,11 @@
   
   .care-circle--8 & {
     @include breakpoint($bp2) {
-      @include on-circle($item-count: 8, $circle-size: 425px, $item-size: 150px, $arrowy: -23px);
+      @include on-circle($item-count: 8, $circle-size: 425px, $item-size: 140px, $arrowy: -23px);
     }
     
     @include breakpoint($bp3) {
-      @include on-circle($item-count: 8, $circle-size: 375px, $item-size: 130px, $arrowy: -20px);
+      @include on-circle($item-count: 8, $circle-size: 400px, $item-size: 125px, $arrowy: -21px);
     }
     
     @include breakpoint($bp4) {
@@ -106,6 +106,11 @@
 }
 
 .care-circle__item {
+  
+  a:link,
+  a:visited {
+    text-decoration: none;
+  }
   
   @include breakpoint(0 $bp2) {
     position: relative;
@@ -365,6 +370,91 @@
         }
       }
     }
+    
+    .care-circle--8 & {
+      &:nth-of-type(2) {
+        
+        &::after {
+          position: absolute;
+          bottom: -2em;
+          left: 45%;
+          left: calc(50% - 15px);
+          transform: rotate(90deg);
+        }
+      }
+      
+      &:nth-of-type(3) {
+        order: 4;
+        
+        &::after {
+          position: absolute;
+          bottom: -2em;
+          left: 45%;
+          left: calc(50% - 15px);
+          transform: rotate(90deg);
+        }
+      }
+      
+      &:nth-of-type(4) {
+        order: 6;
+        
+        &::after {
+          position: absolute;
+          bottom: -2em;
+          left: 45%;
+          left: calc(50% - 15px);
+          transform: rotate(90deg);
+        }
+      }
+      
+      &:nth-of-type(5) {
+        order: 8;
+        
+        &::after {
+          position: absolute;
+          top: 40%;
+          top: calc(50% - 15px);
+          left: -18%;
+          transform: rotate(180deg);
+        }
+      }
+      
+      &:nth-of-type(6) {
+        order: 7;
+        
+        &::after {
+          position: absolute;
+          top: -2em;
+          left: 45%;
+          left: calc(50% - 15px);
+          transform: rotate(270deg);
+        }
+      }
+      
+      &:nth-of-type(7) {
+        order: 5;
+        
+        &::after {
+          position: absolute;
+          top: -2em;
+          left: 45%;
+          left: calc(50% - 15px);
+          transform: rotate(270deg);
+        }
+      }
+      
+      &:nth-of-type(8) {
+        order: 3;
+        
+        &::after {
+          position: absolute;
+          top: -2em;
+          left: 45%;
+          left: calc(50% - 15px);
+          transform: rotate(270deg);
+        }
+      }
+    }
   }
   
   &::after {
@@ -393,8 +483,11 @@
   height: 100%;
   width: 100%;
   border-radius: 100%;
-  background-color: $off-white;
+  background-color: $trust-ltst;
   padding: 2em;
+  text-align: center;
+  color: $primary-dark;
+  text-decoration: none;
   
   @include breakpoint(0 $bp2) {
     position: absolute;
@@ -402,5 +495,33 @@
     bottom: 0;
     left: 0;
     right: 0;
+  }
+  
+  .care-circle__item--healing & {
+    background-color: $healing-ltst;
+  }
+  
+  .care-circle__item--uplifting & {
+    background-color: $uplifting-ltst;
+  }
+  
+  .care-circle__item--wisdom & {
+    background-color: $wisdom-ltst;
+  }
+  
+  .care-circle__item--growth & {
+    background-color: $growth-ltst;
+  }
+  
+  .care-circle__item--tranquil & {
+    background-color: $tranquil-ltst;
+  }
+  
+  .care-circle__item--energy & {
+    background-color: $energy-ltst;
+  }
+  
+  .care-circle__item--pink & {
+    background-color: #e5c1ca;
   }
 }
