--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/basic-header.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/basic-header.twig
@@ -22,14 +22,16 @@
       {% if header.link %}
         <a class="basic-header__link" href="{{ header.link.url }}">{{ header.link.label }}</a>
       {% endif %}
-      
-      {% if header.form %}
-        {% include "@organisms/listings/listing-search/listing-search.twig" with {
-          label: header.form.label,
-          placeholder: header.form.placeholder,
-          button: header.form.button
-        } %}
-      {% endif %}
+
+      {% block form %}
+        {% if header.form %}
+          {% include "@organisms/listings/listing-search/listing-search.twig" with {
+            label: header.form.label,
+            placeholder: header.form.placeholder,
+            button: header.form.button
+          } %}
+        {% endif %}
+      {% endblock %}
       </div>
       
       {% if header.cta %}
