--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/form-section/form-section.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/form-section/form-section.twig
@@ -1,5 +1,5 @@
 {{ attach_library('tower_health/autocomplete') }}
-{% block form-section %}
+{% block form_section %}
   <div class="form-section">
     {% if section_heading %}
       {% include "@atoms/02-text/00-headings/_heading.twig"  with {
