--- a/docroot/themes/custom/tower_health/templates/block/block--providerproximityfilter.html.twig
+++ b/docroot/themes/custom/tower_health/templates/block/block--providerproximityfilter.html.twig
@@ -27,13 +27,12 @@
 #}
 {{ attach_library('tower_health/proximity-facet') }}
 
-<div {{ bem('block') }}>
+<div {{ bem('item', ['group', 'oneThird'], 'form-section') }}>
   {{ title_prefix }}
-  <h2{{ title_attributes.addClass('h2') }}>{{ 'Zip Code'|t }}</h2>
   {{ title_suffix }}
   {% block content %}
     {{ content|without('find_doctor_search')}}
 
-    <a href="#" class="js-use-my-location" data-view="views-exposed-form-find-a-provider-find-doctor">{{ 'Use my location'|t }}</a>
+    <a href="#" class="js-use-my-location link link--small" data-view="views-exposed-form-find-a-provider-find-doctor">{{ 'Use my location'|t }}</a>
   {% endblock %}
 </div>
