--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/form-section/_form-section.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/form-section/_form-section.scss
@@ -24,7 +24,16 @@
 .form-section__item {
   margin-bottom: 2em;
   width: 100%;
-  
+
+  &--group {
+    @include breakpoint($bp2) {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      justify-content: space-between;
+    }
+  }
+
   input,
   select {
     margin-bottom: 0;
@@ -57,9 +66,17 @@
   }
   
   &--oneThird {
-    
+
     @include breakpoint($bp3) {
       width: 31%;
+    }
+  }
+
+
+  &--oneHalf {
+
+    @include breakpoint($bp3) {
+      width: 48%;
     }
   }
   
