--- a/docroot/themes/custom/tower_health/templates/form/form-element--edit-find-location-search.html.twig
+++ b/docroot/themes/custom/tower_health/templates/form/form-element--edit-find-location-search.html.twig
@@ -44,48 +44,17 @@
  * @see template_preprocess_form_element()
  */
 #}
-{% if classes is empty %}
-  {% set classes = [] %}
-{% endif %}
 {%
-  set classes = classes|merge([
+  set classes = [
+    'listing-search__input',
     'js-form-item',
     'form-item',
-  ])
-%}
-{%
-  set description_classes = [
-    'form-item__description',
-    description_display == 'invisible' ? 'visually-hidden',
+    'js-form-type-' ~ type|clean_class,
+    'form-item-' ~ name|clean_class,
+    'js-form-item-' ~ name|clean_class,
+    title_display not in ['after', 'before'] ? 'form-no-label',
+    disabled == 'disabled' ? 'form-disabled',
+    errors ? 'form-item--error',
   ]
 %}
-<div{{ attributes.addClass(classes) }}>
-  {% if label_display in ['before', 'invisible'] %}
-    {{ label }}
-  {% endif %}
-  {% if prefix is not empty %}
-    <span class="field-prefix">{{ prefix }}</span>
-  {% endif %}
-  {% if description_display == 'before' and description.content %}
-    <div{{ description.attributes }}>
-      {{ description.content }}
-    </div>
-  {% endif %}
-  {{ children }}
-  {% if suffix is not empty %}
-    <span class="field-suffix">{{ suffix }}</span>
-  {% endif %}
-  {% if label_display == 'after' %}
-    {{ label }}
-  {% endif %}
-  {% if errors %}
-    <div class="form-item--error-message">
-      {{ errors }}
-    </div>
-  {% endif %}
-  {% if description_display in ['after', 'invisible'] and description.content %}
-    <div{{ description.attributes.addClass(description_classes) }}>
-      {{ description.content }}
-    </div>
-  {% endif %}
-</div>
+{% include "@atoms/05-forms/_form-element.twig" %}
