--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
@@ -74,6 +74,7 @@
     border-radius: $rd-brd-sm;
     width: 75%;
     padding: 2em;
+    min-height: 300px;
   }
 
   @include breakpoint($bp3) {
@@ -83,6 +84,7 @@
     box-shadow: none;
     position: static;
     border-radius: $rd-brd-lg;
+    min-height: 450px;
   }
 
   @include breakpoint($bp4) {
@@ -93,6 +95,7 @@
   @include breakpoint($bp6) {
     width: 80%;
     padding: 2.25em 32% 2.25em 2em;
+    min-height: 500px;
   }
 }
 
