Add separate blocks for proximity and location hero - different ids + templates.

--- a/docroot/themes/custom/tower_health/templates/block/block--locationproximityfilter.html.twig
+++ b/docroot/themes/custom/tower_health/templates/block/block--locationproximityfilter.html.twig
@@ -28,12 +28,10 @@
 
 {{ attach_library('tower_health/proximity-facet') }}
 
-<div {{ bem('item', ['group', 'oneHalf'], 'form-section') }}>
+<div {{ bem('item', ['oneHalf'], 'form-section') }}>
   {{ title_prefix }}
   {{ title_suffix }}
   {% block content %}
     {{ content|without('find_location_search')}}
-
-    <a href="#" class="js-use-my-location link link--small" data-view="views-exposed-form-find-a-location-find-location">{{ 'Use my location'|t }}</a>
   {% endblock %}
 </div>
