Fix header for styleguide and drupal.

--- a/docroot/themes/custom/tower_health/components/_meta/_00-head.twig
+++ b/docroot/themes/custom/tower_health/components/_meta/_00-head.twig
@@ -27,7 +27,7 @@
     <!-- End Pattern Lab -->
 
   </head>
-  <body class="{{ bodyClass }}">
+  <body class="{{ bodyClass }} styleguide">
     <!-- for js not found errors in Pattern Lab -->
   	<div class="visually-hidden">
   		<div id="tabs" class="tabs"></div>
