--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/care-circle/_care-circle.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/care-circle/_care-circle.scss
@@ -1,11 +1,60 @@
+.care-circle__banner {
+  margin: 3em 0;
+  padding: 2em 0;
+  border-top: 1px solid $off-white;
+  border-bottom: 1px solid $off-white;
+}
+
 .care-circle {
   position: relative;
-  height: 0;
-  padding-bottom: 50%;
+  display: block;
+}
+
+.care-circle__title {
+  @include adjust-font-size-to($lg-heading, 1.35);
+  text-align: center;
+  margin: 0 0 1em;
+  
+  a:link,
+  a:visited {
+    text-decoration: none;
+  }
+  
+  @include breakpoint($bp2) {
+    // 425
+    @include adjust-font-size-to($md-heading, 1.1);
+    max-width: 275px;
+    margin: 0;
+  }
+  
+  @include breakpoint($bp3) {
+    // 375
+    max-width: 250px;
+  }
+  
+  @include breakpoint($bp4) {
+    // 575
+    @include adjust-font-size-to($lg-heading, 1.35);
+    max-width: 375px;
+  }
+}
+
+.care-circle__content {
+  
+  @include breakpoint($bp2) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .care-circle__list {
-  margin: 75px auto 0;
+  margin: 75px auto;
   border: solid 3px $off-white;
   list-style: none;
   padding: 0;
@@ -13,10 +62,14 @@
   @include breakpoint(0 $bp2) {
     display: flex;
     justify-content: center;
-    margin: 0 2em;
+    margin: 0;
     border-radius: 21px;
     flex-wrap: wrap;
     border: none;
+  }
+  
+  @include breakpoint($bp4) {
+    margin: 95px auto;
   }
   
   .care-circle--3 & {
@@ -30,7 +83,7 @@
     }
     
     @include breakpoint($bp4) {
-      @include on-circle($item-count: 3, $circle-size: 625px, $item-size: 150px, $arrowy: -99px);
+      @include on-circle($item-count: 3, $circle-size: 575px, $item-size: 175px, $arrowy: -99px);
     }
   }
   
@@ -44,7 +97,7 @@
     }
     
     @include breakpoint($bp4) {
-      @include on-circle($item-count: 4, $circle-size: 625px, $item-size: 150px, $arrowy: -36px);
+      @include on-circle($item-count: 4, $circle-size: 575px, $item-size: 175px, $arrowy: -32px);
     }
   }
   
@@ -58,7 +111,7 @@
     }
     
     @include breakpoint($bp4) {
-      @include on-circle($item-count: 5, $circle-size: 625px, $item-size: 150px, $arrowy: -36px);
+      @include on-circle($item-count: 5, $circle-size: 575px, $item-size: 175px, $arrowy: -32px);
     }
   }
   
@@ -72,7 +125,7 @@
     }
     
     @include breakpoint($bp4) {
-      @include on-circle($item-count: 6, $circle-size: 625px, $item-size: 150px, $arrowy: -36px);
+      @include on-circle($item-count: 6, $circle-size: 575px, $item-size: 175px, $arrowy: -32px);
     }
   }
   
@@ -86,7 +139,7 @@
     }
     
     @include breakpoint($bp4) {
-      @include on-circle($item-count: 7, $circle-size: 625px, $item-size: 150px, $arrowy: -36px);
+      @include on-circle($item-count: 7, $circle-size: 575px, $item-size: 175px, $arrowy: -32px);
     }
   }
   
@@ -100,7 +153,7 @@
     }
     
     @include breakpoint($bp4) {
-      @include on-circle($item-count: 8, $circle-size: 625px, $item-size: 150px, $arrowy: -36px);
+      @include on-circle($item-count: 8, $circle-size: 575px, $item-size: 175px, $arrowy: -32px);
     }
   }
 }
@@ -110,6 +163,20 @@
   a:link,
   a:visited {
     text-decoration: none;
+    width: 100%;
+    color: $primary-dark;
+  }
+  
+  a:active,
+  a:hover,
+  a:focus {
+    text-decoration: underline;
+    
+    .care-circle__item__inner {
+      transform: scale(1.05);
+      box-shadow: $shadow;
+      transition: all .5s ease;
+    }
   }
   
   @include breakpoint(0 $bp2) {
@@ -465,6 +532,7 @@
     background: url(../pattern-lab/public/images/border-arrow.svg);
     background-size: contain;
     background-repeat: no-repeat;
+    z-index: 1;
     
     @include breakpoint($bp2) {
       position: absolute;
@@ -477,17 +545,21 @@
 }
 
 .care-circle__item__inner {
+  @include adjust-font-size-to($label, .6);
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100%;
   width: 100%;
   border-radius: 100%;
   background-color: $trust-ltst;
-  padding: 2em;
+  padding: .5em 1em 1em;
   text-align: center;
   color: $primary-dark;
   text-decoration: none;
+  z-index: 3;
+  transition: all .5s ease;
   
   @include breakpoint(0 $bp2) {
     position: absolute;
@@ -495,6 +567,14 @@
     bottom: 0;
     left: 0;
     right: 0;
+  }
+  
+  @include breakpoint($bp3) {
+    @include adjust-font-size-to($crumb, .5);
+  }
+  
+  @include breakpoint($bp4) {
+    @include adjust-font-size-to($label, .65);
   }
   
   .care-circle__item--healing & {
@@ -524,4 +604,24 @@
   .care-circle__item--pink & {
     background-color: #e5c1ca;
   }
+}
+
+.care-circle__item__icon {
+  display: block;
+  max-width: 60px;
+  max-height: 35px;
+  margin-bottom: .5em;
+}
+
+.care-circle__text {
+  margin-top: 2em;
+  
+  @include breakpoint($bp2) {
+    margin-top: 6em;
+  }
+}
+
+.care-circle__text__title {
+  margin-top: 0;
+  margin-bottom: .25em;
 }
