--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.twig
@@ -13,6 +13,13 @@
   
   {% block page_content %}
     {% include "@molecules/rich-text/rich-text.twig" %}
+    
+    {% include "@organisms/care-circle/care-circle.twig" with {
+      title: careCircle.title,
+      url: careCircle.url,
+      items: careCircle.items,
+      content: careCircle.content
+    } %}
   {% endblock %}
   
   {% block bottom_page_sidebar %}
@@ -41,6 +48,14 @@
     {% include "@molecules/rich-text/rich-text.twig" with {
       rich_text_full_width: true,
       rich_text: paragraph_rich_text
+    } %}
+    
+    {% include "@organisms/care-circle/care-circle.twig" with {
+      title: careCircleFull.title,
+      url: careCircleFull.url,
+      items: careCircleFull.items,
+      content: careCircleFull.content,
+      fullWidth: careCircleFull.fullWidth
     } %}
     
     {% include "@organisms/recognition-row/recognition-row.twig" %}
