Fix cta banner on home layout.

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/home/home.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/home/home.twig
@@ -24,8 +24,8 @@
     } %}
     
     {% include "@organisms/cta-banner/cta-banner.twig" with {
-      title_1: cta_banner.title_1,
-      title_2: cta_banner.title_2,
+      title__top: cta_banner.title__top,
+      title__bottom: cta_banner.title__bottom,
       subtitle: cta_banner.subtitle,
       img: cta_banner.img,
       classes: cta_banner.classes,
