--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/home/home.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/home/home.twig
@@ -16,9 +16,9 @@
     } %}
     
     {% include "@organisms/cta-list-banner/cta-list-banner.twig" with {
-      title_1: cta_list.title_1,
-      title_2: cta_list.title_2,
-      title_3: cta_list.title_3,
+      title_top: cta_list.title_top,
+      title_middle: cta_list.title_middle,
+      title_bottom: cta_list.title_bottom,
       subtitle: cta_list.subtitle,
       links: cta_list.links
     } %}
